# game_learning_journey

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
hello_entt/hello_world/: CMakeLists.txt  app.cpp  interface.ixx
hello_opengl/: CMakeLists.txt
hello_opengl/first_opengl/: CMakeLists.txt
hello_opengl/first_opengl/res/reference/: hello_triangle.cpp
hello_opengl/first_opengl/res/shader/: first_frag.glsl  first_vert.glsl  second_frag.glsl
hello_opengl/first_opengl/src/: app.ixx  application.ixx  file_operation.ixx  main.cpp  mesh.ixx  renderer.ixx  sandbox.ixx  shader.ixx  window.ixx
hello_opengl/opengl_sandbox/: CMakeLists.txt  README.md
hello_opengl/opengl_sandbox/res/shader/: first_frag.glsl
hello_opengl/opengl_sandbox/src/: app.ixx  file_operation.ixx  main.cpp  sandbox.ixx  shader.ixx  window.ixx
hello_opengl/opengl_sandbox/src/core/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
hello_sdl/: CMakeLists.txt
hello_sdl/01_first_window/: CMakeLists.txt
hello_sdl/01_first_window/src/: app.cpp
hello_sdl/02_primitives/: CMakeLists.txt
hello_sdl/02_primitives/src/: Application.ixx  app.cpp
hello_sdl/03_lines/: CMakeLists.txt
hello_sdl/03_lines/src/: Application.ixx  app.cpp
hello_sdl/04_points/: CMakeLists.txt
hello_sdl/04_points/src/: Application.ixx  app.cpp
hello_sdl/05_rectangle/: CMakeLists.txt
hello_sdl/05_rectangle/src/: Application.ixx  app.cpp
hello_sdl/06_texture/: CMakeLists.txt
hello_sdl/06_texture/src/: application.ixx  main.cpp
hello_sdl/07_streaming_texture/: CMakeLists.txt
hello_sdl/07_streaming_texture/src/: application.ixx  main.cpp
hello_sdl/first_window/: CMakeLists.txt
hello_sdl/first_window/src/: application.cpp  application.hpp
hello_sdl/primitives/: CMakeLists.txt
hello_sdl/primitives/src/: Application.ixx  app.cpp
hello_sdl/snake/: CMakeLists.txt
hello_sdl/snake/src/: application.ixx  main.cpp  snake.ixx
hello_sdl/woodeneye/: CMakeLists.txt
hello_sdl/woodeneye/src/: application.ixx  main.cpp  types.ixx
